@@ -65,7 +65,7 @@ subtitle.srt application/x-subrip
 # Copied from http://msdn2.microsoft.com/en-us/library/ms971327.aspx
 subtitle.smi application/x-sami x
 # Copied from http://www1.mplayerhq.hu/MPlayer/samples/sub/Lola.sub/Run.Lola.Run.1998.DVDivX-SChiZO.sub
-subtitle-microdvd.sub text/x-microdvd x
+subtitle-microdvd.sub text/x-microdvd
 # Copied from http://www1.mplayerhq.hu/MPlayer/samples/sub/manyfmts/FOVH%20MoviePlayer.sub
 subtitle-mpsub.sub text/x-mpsub x
 # Copied from http://en.wikipedia.org/wiki/SubStation_Alpha
